--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML5>
-<script src="codemirror.js"></script>
-<link rel="stylesheet" href="codemirror.css">
-<script src="jsmode.js"></script>
+<link rel="stylesheet" href="codemirror/codemirror.css">
+<script src="codemirror/codemirror.js"></script>
+<script src="codemirror/jsmode.js"></script>
+<script src="jszip/jszip.min.js"></script>
 
 <script type="text/javascript" src="script.js"></script>
 <link rel="stylesheet" href="style.css">
