support icon sizes

--- a/index.html
+++ b/index.html
@@ -31,10 +31,21 @@
             </object>
         </fieldset>
 
-        <div class="actions">
+        <div class="action-checkboxes">
+            <div>
+                <input type="checkbox" id="checkbox_smallicons">
+                <label for="checkbox_smallicons">smallIcons: 10x10</label>
+            </div>
+            <div>
+                <input type="checkbox" id="checkbox_mediumicons">
+                <label for="checkbox_mediumicons">mediumIcons: 16x16</label>
+            </div>
+            <div>
+                <input type="checkbox" id="checkbox_largeicons">
+                <label for="checkbox_largeicons">largeIcons: 28x24</label>
+            </div>
             <button id="extract-button">extract icons</button>
         </div>
-
     </div>
     <fieldset class="descriptors">
         <legend>Icon Descriptors</legend>
