save icons per-folder

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <label for="checkbox_largeicons">largeIcons: 28x24</label>
             </div>
             <button id="extract-button">extract icons</button>
+            <button id="savezip">Download all icons (chrome only)</button>
         </div>
     </div>
     <fieldset class="descriptors">
@@ -56,7 +57,7 @@
 <hr>
 <div class="output">
     <div class="output-column output-success">
-        <h1 class="title">Extracted: <span class="stats-extracted">0</span></h1><button id="savezip">Download all icons (chrome only)</button>
+        <h1 class="title">Extracted: <span class="stats-extracted">0</span></h1>
         <div class="extracted-icons">
         </div>
     </div>
