disable buttons unless svgs are loaded

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <input type="checkbox" id="checkbox_largeicons">
                 <label for="checkbox_largeicons">largeIcons: 28x24</label>
             </div>
-            <button id="extract-button">extract icons</button>
-            <button id="savezip">Download all icons (chrome only)</button>
+            <button disabled id="extract-button">extract icons</button>
+            <button disabled id="savezip">Download all icons (chrome only)</button>
         </div>
     </div>
     <fieldset class="descriptors">
