gen-devtools-icons script

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 
         <div class="action-checkboxes">
             <div>
-                <input type="checkbox" id="checkbox_smallicons">
+                <input type="checkbox" id="checkbox_smallicons" checked>
                 <label for="checkbox_smallicons">smallIcons: 10x10</label>
             </div>
             <div>
-                <input type="checkbox" id="checkbox_mediumicons">
+                <input type="checkbox" id="checkbox_mediumicons" checked>
                 <label for="checkbox_mediumicons">mediumIcons: 16x16</label>
             </div>
             <div>
-                <input type="checkbox" id="checkbox_largeicons">
+                <input type="checkbox" id="checkbox_largeicons" checked>
                 <label for="checkbox_largeicons">largeIcons: 28x24</label>
             </div>
             <button disabled id="extract-button">extract icons</button>
