add instructions button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 <label for="checkbox_largeicons">largeIcons: 28x24</label>
             </div>
             <button disabled id="extract-button">extract icons</button>
-            <button disabled id="savezip">Download all icons (chrome only)</button>
+            <button disabled id="savezip">Download icons (chrome only)</button>
+            <div><a class='instructions' href="https://github.com/aslushnikov/devtools-icon-extractor/blob/master/README.md#how-to-use">Further Instructions</a></div>
         </div>
     </div>
     <fieldset class="descriptors">
