use icons spritesheet from upstream

--- a/index.html
+++ b/index.html
@@ -7,28 +7,30 @@
 
 <script type="text/javascript" src="script.js"></script>
 <link rel="stylesheet" href="style.css">
-
+<div class="title">
+    <span>Using resouces:</span><a target="_blank" class="sha">master</a>
+</div>
 <div class="inputs">
     <div class="spritesheets">
         <fieldset class="spritesheet">
             <legend>smallIcons.svg</legend>
-            <object type="image/svg+xml" data="smallIcons.svg" id="smallicons">
+            <div type="image/svg+xml" id="smallicons">
               smallIcons.svg
-            </object>
+            </div>
         </fieldset>
 
         <fieldset class="spritesheet">
             <legend>resourceGlyphs.svg</legend>
-            <object type="image/svg+xml" data="resourceGlyphs.svg" id="resourceicons">
+            <div type="image/svg+xml" id="resourceicons">
               resourceGlyphs.svg
-            </object>
+            </div>
         </fieldset>
 
         <fieldset class="spritesheet">
             <legend>toolbarButtonGlyphs.svg</legend>
-            <object type="image/svg+xml" data="toolbarButtonGlyphs.svg" id="largeicons">
+            <div type="image/svg+xml" id="largeicons">
               toolbarButtonGlyphs.svg
-            </object>
+            </div>
         </fieldset>
 
         <div class="action-checkboxes">
